kubernetes/app/main/glance/glance/http.httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance-http
spec:
  parentRefs:
    - &gateway
      name: default
      sectionName: http
      namespace: istio-system
    - <<: *gateway
      sectionName: http-wildcard
    - <<: *gateway
      sectionName: http-local
    - <<: *gateway
      sectionName: http-wildcard-local
  hostnames:
    - ${PUBLIC_DOMAIN}
    - ${LOCAL_DOMAIN}
    - glance.${PUBLIC_DOMAIN}
    - glance.${LOCAL_DOMAIN}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
